attempted (but failed fix of white space at top; more transparent see more button; a bit of faq cleaning

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,12 @@ html {
   margin: 0;
   padding: 0;
   top: 0;
-  left: 0; }
+  left: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
 
 body {
   width: 100%;
@@ -24,14 +29,21 @@ body {
   margin: 0;
   padding: 0;
   top: 0;
-  left: 0; }
+  left: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
 
 .introduction {
+  position: relative;
   z-index: 0;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  top: 0;
   background: url(../images/color-bg.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -61,6 +73,8 @@ body {
       font-family: "Kozuka";
       font-weight: 300;
       font-size: 36px; }
+    .introduction .content .pure-form {
+      font-size: 30px; }
 
 .statistics {
   z-index: 2;
@@ -101,13 +115,17 @@ body {
     font-family: "Open Sans", sans-serif;
     font-size: 28px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     margin: 45px auto 10px auto; }
   .faq .answer {
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
+    text-align: left;
     line-height: 2; }
+  .faq a {
+    color: white;
+    text-decoration: underline;  }
 
 .footer {
   width: 100%;
@@ -149,14 +167,14 @@ body {
   display: block;
   width: 170px;
   height: 85px;
-  background-color: #808080;
+  background-color: rgba(128,128,128,.3);
   border-radius: 170px 170px 0 0;
   -moz-border-radius: 170px 170px 0 0;
   -webkit-border-radius: 170px 170px 0 0;
   position: absolute;
   bottom: -5px;
   left: 50%;
-  opacity: .8;
+  opacity: 1;
   text-decoration: none;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
